src/objects/Disposition_Product__c.object
<CustomObject>
    <description>This is child object of Disposition Section.Holds the products associated with disposition type.</description>
    <fields>
        <fullName>Defect_Quantity__c</fullName>
        <label>Defect Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispose_Quantity__c</fullName>
        <label>Dispose Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>General_Sub_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Sub Task</label>
        <referenceTo>General_Sub_Task__c</referenceTo>
        <relationshipLabel>Disposition Products</relationshipLabel>
        <relationshipName>Disposition_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NC_ProductId__c</fullName>
        <label>NC ProductId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Product__c</fullName>
        <description>holds name of the NC_Product</description>
        <label>NC_Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Conformance__c</fullName>
        <formula>General_Sub_Task__r.Non_Conformance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Conformance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Quantity__c</fullName>
        <label>Pending Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Batch__c</fullName>
        <description>holds the details of product batch or lot</description>
        <label>Product Batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disposition Product</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Disposition Product</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>